src/reporter/snapshots/consistent_whitespace__reporter__tests__across_files_single_file.snap
---
source: src/reporter.rs
expression: "report(&errors, &ConsistencyMode::AcrossFiles)"
---
::group::src/tabs.txt
::error file=src/tabs.txt::Uses different whitespace than other files
::error file=src/tabs.txt,line=1::None
::error file=src/tabs.txt,line=2::Tabs
::error file=src/tabs.txt,line=3::Tabs
::endgroup::
