src/reporter/snapshots/consistent_whitespace__reporter__tests__within_files_mixed_file.snap
---
source: src/reporter.rs
expression: "report(&errors, &ConsistencyMode::WithinFiles)"
---
::group::src/main.rs
::error file=src/main.rs::Inconsistent Formatting
::error file=src/main.rs,line=1::None
::error file=src/main.rs,line=2::Spaces
::error file=src/main.rs,line=3::Tabs
::endgroup::
